--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "sweetalert2": "^11.7.28",
     "web-vitals": "^2.1.4"
   },
